--- a/Templates/delete_record.html
+++ b/Templates/delete_record.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
  <html>
  <head>
- <title>Home</title>
- <style>
+   <title>delete record</title>
 
-  body{
-   background-image: url('/static/1.jpg');
+  <style>
+
+   body{
+   background-image: url('/static/5.jpg');
    background-size: cover;
    text-align: center;
+   font-weight: bold;
+   font-size: larger;
   }
 
   a:link, a:visited {
@@ -23,14 +26,11 @@
   background-color: red;
   }
 
- </style>
+  </style>
+
  </head>
  <body>
-
- <br><br><h1> Student Management System </h1>
- <br><br><a href="/add_student">Add Student</a><br><br>
- <br><br><a href="/delete_student">Delete Student </a><br><br>
- <br><br><a href ="/student_info">View Student Detials</a><br><br>
-
+ <br><h1>{{msg}}</h1><br><br>
+ <a href="/student_info">View Student Info</a>
  </body>
- </html>
+ </html> 
